load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "base",
    hdrs = glob([
        "*.h",
        "*.c",
    ]),
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        "//src/lib_raddbg_markup",
        "//src/third_party/stb",
    ],
)
