load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "hash_store",
    hdrs = glob([
        "*.h",
        "*.c",
    ]),
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        "//src/third_party/xxHash",
    ],
)
