load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:copts.bzl", "COPTS")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "lib",
    hdrs = glob([
        "**/*.h",
        "**/*.c",
    ]),
    copts = COPTS,
    strip_include_prefix = "/src",
)

cc_binary(
    name = "metagen",
    srcs = ["metagen_main.c"],
    copts = COPTS,
    visibility = ["//:__subpackages__"],
    deps = [
        ":lib",
        "//src/mdesk",
        "//src/third_party/stb",
    ],
)
