load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "COPTS")

package(default_visibility = ["//:__subpackages__"])

cc_binary(
    name = "rdi_breakpad_from_pdb",
    srcs = ["rdi_breakpad_from_pdb_main.c"],
    copts = COPTS,
    deps = [
        "//src/async",
        "//src/base",
        "//src/codeview",
        "//src/coff",
        "//src/msf",
        "//src/os",
        "//src/path",
        "//src/pdb",
        "//src/rdi_from_pdb",
        "//src/rdi_make",
    ],
)
