load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rdi_breakpad_from_pdb",
    hdrs = glob([
        "*.c",
        "*.h",
    ]),
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        "//src/async",
        "//src/base",
        "//src/codeview",
        "//src/coff",
        "//src/msf",
        "//src/os",
        "//src/path",
        "//src/pdb",
        "//src/rdi_from_pdb:lib",
        "//src/rdi_make",
    ],
)
