load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:copts.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "lib",
    hdrs = glob([
        "*.h",
        "*.c",
    ]),
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        "//src/third_party/rad_lzb_simple",
        "//src/third_party/stb",
    ],
)
