load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "ui",
    hdrs = glob([
        "*.h",
        "*.c",
        "generated/*.c",
        "generated/*.h",
    ]),
    copts = COPTS,
    strip_include_prefix = "/src",
    visibility = ["//visibility:public"],
)
